# nyar-collatz

./: Cargo.toml  Readme.md
src/: collatz.rs  collatz64.rs  lib.rs
