[package]
name = "nyar-collatz"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Collatz lib for Nyar"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/nyar-lang/nyar-collatz"
exclude = ["/tests/*", "/.idea/*"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[dependencies.num]
version = "0.2"


[lib]
crate-type = ["dylib", "rlib"]
name = "collatz"
path = "src/lib.rs"
